# batt_controller

./: .gitignore  AGENTS.md  Cargo.toml  FINAL_REVERSE_REPORT.md  debug.sh  fix.sh
c_src/: Makefile  charging.c  charging.h  charging_internal.h  charging_loop.c  charging_phase.c  cli.c  cli.h  config.c  config.h  monitor.c  monitor.h  sysfs.c
crates/app/: Cargo.toml
crates/app/src/: cli.rs  main.rs
crates/batt-charging/: Cargo.toml
crates/batt-charging/src/: charging.rs  lib.rs  loop_.rs  phase.rs
crates/batt-charging/src/phase/: cv.rs  cycle.rs  depol.rs  mod.rs  rise.rs  tc.rs
crates/batt-common/: Cargo.toml
crates/batt-common/src/: error.rs  lib.rs
crates/batt-config/: Cargo.toml
crates/batt-config/src/: lib.rs
crates/batt-monitor/: Cargo.toml
crates/batt-monitor/src/: lib.rs
crates/batt-sysfs/: Cargo.toml
crates/batt-sysfs/src/: lib.rs
src/: Makefile  charging.c  charging.h  charging_internal.h  charging_loop.c  charging_phase.c  cli.c  config.c  config.h  log.c  log.h  main.c  monitor.c  monitor.h  sysfs.c  sysfs.h
